--- a/estilos.css
+++ b/estilos.css
@@ -224,3 +224,96 @@ header .content_header p{
     font-size: 19px;
 }
 
+/*? ***Destacados*** */
+
+.destacados{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    flex-wrap: wrap;
+}
+
+.destacados::before{
+    content: 'Destacados';
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: 600;
+    font-size: 12em;
+    color: rgba(0, 0, 0, 0.07);
+}
+
+.game{
+    position: relative;
+    width: 45%;
+    height: 350px;
+    margin: 40px 20px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    transition: all 0.5s;
+}
+
+.game:nth-child(1){
+    background: linear-gradient(45deg, #10214c, #da3dbe);
+}
+
+.game:nth-child(2){
+    background: linear-gradient(45deg, #1a2f3f, #7094ce);
+}
+
+.game:nth-child(3){
+    background: linear-gradient(45deg, #000, #1c78b2);
+}
+
+.game:nth-child(4){
+    background: linear-gradient(45deg, #0e2b2f, #00ffff);
+}
+
+.game img{
+    position: absolute;
+    left: 50%;
+    bottom: 0;
+    transform: translate(-50%);
+    height: 380px;
+    z-index: 1;
+    transition: all 0.5s;
+}
+
+.game:hover img{
+    left: 75%;
+    height: 400px;
+}
+
+.game .content{
+    position: relative;
+    width: 45%;
+    left: 20%;
+    padding: 20px 20px 20px 40px;
+    color: var(--color-blanco);
+    opacity: 0;
+    transition: all 0.5s;
+}
+
+.game:hover .content{
+    left: 0;
+    opacity: 1;
+}
+
+.game .content h2{
+    text-transform: uppercase;
+    font-size: 2.2em;
+    line-height: 1em;
+}
+
+.game .content a{
+    position: relative;
+    color: var(--color-negro);
+    background: var(--color-blanco);
+    display: inline-block;
+    padding: 10px 20px;
+    margin-top: 10px;
+    font-weight: 700;
+}
