--- a/estilos.css
+++ b/estilos.css
@@ -317,3 +317,142 @@ header .content_header p{
     margin-top: 10px;
     font-weight: 700;
 }
+
+
+/*? ***Titulo de artículo*** */
+.title{
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    margin: 70px 0 20px 0;
+}
+
+.title h1{
+    font-size: 75px;
+    font-weight: 400;
+}
+
+.title .badget-contaier{
+    margin: 10px;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.title .badget-contaier .badge{
+    background: transparent;
+    color: var(--color-gris-claro);
+    border: 1px solid var(--color-gris-claro);
+}
+
+.title .badget-contaier .badge:hover{
+    background: var(--color-primario);
+    color: var(--color-blanco);
+    border: 1px solid transparent;
+}
+
+.title::before{
+    content: 'Blog';
+    position: absolute;
+    top: -80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: 600;
+    font-size: 12em;
+    z-index: -1;
+    color: rgba(0, 0, 0, 0.05);
+}
+
+
+/*? ***Seccion de articulos*** */
+.articulos{
+    position: relative;
+    padding: 50px;
+    display: flex;
+    justify-content: space-around;
+}
+
+.container-articulos{
+    margin: 0 100px 0 0;
+}
+
+.card{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 200px;
+    margin: 100px 0;
+}
+
+.card:first-child{
+    margin: 0 0 100px 0;
+}
+
+.card .imgBox{
+    width: 80%;
+    height: 100%;
+}
+
+.card .imgBox img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: bottom;
+}
+
+.card .content{
+    padding-left: 20px;
+}
+
+.card .content *{
+    margin: 15px 0;
+}
+
+.card .content h3{
+    font-size: 40px;
+    font-weight: 300;
+    letter-spacing: 1px;
+}
+
+.card .content p{
+    font-size: 18px;
+}
+
+
+/*? ***Menu lateral*** */
+
+aside{
+    width: 30%;
+    height: 100%;
+    background: var(--color-primario);
+    box-shadow: 0 0 10px 0 var(--color-primario);
+    padding: 20px;
+    border-radius: 5px;
+    position: sticky;
+    top: 20px;
+}
+
+aside nav{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+aside nav a{
+    margin: 15px 0;
+    color: var(--color-blanco);
+    opacity: 0.5;
+    font-weight: 600;
+    font-size: 16px;
+    text-transform: uppercase;
+    transition: all 0.5s;
+}
+
+aside nav a:hover{
+    opacity: 1;
+}
