--- a/estilos.css
+++ b/estilos.css
@@ -458,7 +458,7 @@ aside nav a:hover{
 }
 
 
-/* Galeria de imagenes */
+/*? Galeria de imagenes */
 .gallery{
     display: flex;
 }
@@ -482,4 +482,27 @@ aside nav a:hover{
     height: 100%;
     object-fit: cover;
     transition: all 0.5s;
+}
+
+/* Footer */
+
+footer{
+    width: 100%;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: var(--color-primario-oscuro);
+}
+
+footer p{
+    font-size: 18px;
+    color: var(--color-blanco);
+    opacity: 0.7;
+}
+
+footer img{
+    width: 35px;
+    height: 35px;
+    margin: 0 20px;
 }
